# aigis-algo-trader

./: .env  README.md  config.yaml  main.py  pyproject.toml
core/: risk_manager.py
strategies/: sniper.py
utils/: logger.py
